syntax = "proto3";
package greetservice;

// Service to greet the user (TEST)
service GreetService {
    rpc GreetWorld (GreetRequest) returns (GreetResponse) {}
    rpc GreetUser (GreetRequest) returns (GreetResponse) {}
}

// String message to request a greet service
message GreetRequest {
    string name = 1;
}

// String response, responding to a greet service
message GreetResponse {
    string message = 1;
}